tests/ui/rfc-2632-const-trait-impl/trait-where-clause-const.stderr
error[E0277]: the trait bound `T: ~const Bar` is not satisfied
  --> $DIR/trait-where-clause-const.rs:19:5
   |
LL |     T::b();
   |     ^^^^^^ the trait `~const Bar` is not implemented for `T`
   |
note: the trait `Bar` is implemented for `T`, but that implementation is not `const`
  --> $DIR/trait-where-clause-const.rs:19:5
   |
LL |     T::b();
   |     ^^^^^^
help: consider further restricting this bound
   |
LL | const fn test1<T: ~const Foo + Bar + ~const Bar>() {
   |                                    ++++++++++++

error[E0277]: the trait bound `T: ~const Bar` is not satisfied
  --> $DIR/trait-where-clause-const.rs:21:5
   |
LL |     T::c::<T>();
   |     ^^^^^^^^^^^ the trait `~const Bar` is not implemented for `T`
   |
note: the trait `Bar` is implemented for `T`, but that implementation is not `const`
  --> $DIR/trait-where-clause-const.rs:21:5
   |
LL |     T::c::<T>();
   |     ^^^^^^^^^^^
help: consider further restricting this bound
   |
LL | const fn test1<T: ~const Foo + Bar + ~const Bar>() {
   |                                    ++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
